# backgammon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Tupfile  algebra.h  bdata.cpp  beardll.cpp  beargen.cpp  bearoff.cpp  bearoff.h  bgnet.cpp  bgnet.h  board.h  build-macos  cmdline.h  console.cpp  console.h  convert.cpp  copyright.txt  equity.h  etest.cpp  fc_sig.h  fc_sig_bias.h  features.h  game.cpp  game.h  good.w  hits.cpp  hits.h  human.cpp  human.h  learnernet.h  makefile  mathfuncs.cpp  mathfuncs.h  matrix-test.cpp  matrix.h  model.h  move.cpp  (+22 more)
bearoff/: CMakeLists.txt  Tupfile  bdata.cpp  beargen.cpp  beargen.h  bearoff.cpp  bearoff.h  makefile  move.cpp  move.h  readme.txt
scripts/: anneal  anneal.py  batchsched  build-x86  gradient.py  playoffs  playoffs.py  plots  plots.py  sched.py  session.py  train.py
unused/: choose.cpp  choose.h  fibs.cpp  junk.cpp
